[package]
name = "secret-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-rs-sdk = {version = "=3.0.1"}
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
colog = "1.3.0"
url = "2.5.7"
reqwest = "0.12.23"
